[feat]: [CDS-42831]: handled runtime inputs for service v2 (#37531)
* [CDS-42831]: handled runtime inputs for service v2

* [CDS-42831]: fix1

* [CDS-42831]: only pass hashmap of svc override and env config in dependency

* fix: [CDS-42831]: Runtime inputs support for overrides manifests and config files

* feat: [CDS-0]: Refactor

* feat: [CDS-0]: Revert dockerfile

* feat: [CDS-0]: rename variable

* fix: [CDS-42831]: use isEnvGlobalManifestOverridesPresent method

* fix: [CDS-42831]: remove toNGEnvironmentInfoConfig method

Co-authored-by: Yogesh Chauhan <yogesh.chauhan@harness.io>